# smart-security-slupsk

./: .gitignore  .gitmodules  README.md  dev_db.sh  dev_start.sh
IoT_App/: IoT-App-Info.plist
IoT_App/IoT_App/: ContentView.swift  IoT_AppApp.swift
IoT_App/IoT_App.xcodeproj/: project.pbxproj
IoT_App/IoT_App/Alerts/: AlertsView.swift
IoT_App/IoT_App/Components/: ButtonView.swift  EmailTextFieldView.swift  ListDeviceItemView.swift  PasswordSecureFieltView.swift
IoT_App/IoT_App/Device/: AuthenticateDeviceView.swift  AvailableNetworksView.swift  ConnectDeviceView.swift  ConnectDeviceViewModel.swift  DeviceDetailsView.swift  DeviceService.swift  IoT-App-Info.plist
IoT_App/IoT_App/Home/: HomeView.swift
IoT_App/IoT_App/Login/: AuthService.swift  LoginView.swift  LoginViewModel.swift
IoT_App/IoT_App/State/: AppState.swift
IoT_App/IoT_App/Utils/: KeyChainHelper.swift
IoT_App_Android/: settings.gradle.kts
IoT_App_Android/app/: build.gradle.kts
IoT_App_Android/gradle/: libs.versions.toml
IoT_App_Android/gradle/wrapper/: gradle-wrapper.properties
IoT_backend/: Dockerfile  build_and_deploy_image.sh  docker-compose.yml  pom.xml
RPI_Quick_Config/: .gitignore  README.md  chuj.py  main.py  requirements.txt  test.py
RPI_Quick_Config/RPI_Server_Config/: app_v1.0.0.py  power_led_status.py
RPI_Quick_Config/mDNS/: __init__.py  mDNS_search.py
ass_backend/: Cargo.toml  README.md  rumqttd.toml
ass_backend/.cargo/: config.toml
ass_backend/config/: development.yaml  test.yaml
ass_backend/examples/: playground.rs
ass_backend/migration/src/: lib.rs  m20241015_073324_user_roles.rs  m20241017_100812_devices.rs
ass_backend/src/: app.rs  lib.rs
ass_backend/src/controllers/: auth.rs  user.rs
ass_backend/src/fixtures/: users.yaml
ass_backend/src/models/: users.rs
ass_backend/src/mqtt/: README.md  mod.rs
ass_backend/src/tasks/: register_device.rs
ass_backend/tests/models/: devices.rs  users.rs
ass_backend/tests/requests/: auth.rs  prepare_data.rs  user.rs
ass_backend/tests/tasks/: mod.rs  register_device.rs  seed.rs
audio-server/: Dockerfile  README.md  build_and_deploy_image.sh  compose.yaml  handleDevice.js  handleUser.js  main.js  package-lock.json  package.json
certs/: .gitignore  README.md  ass.cert.pem  ass.key.pem  ca.cert.pem  ca.cert.srl  ca.key.pem  gen_keys.sh  mqtt.cert.pem  mqtt.csr.pem  mqtt.key.pem  openssl.cnf
certs/certs/: ass.cert.pem  ass.key.pem  ca.cert.pem  ca.cert.srl  ca.key.pem  keystore.jks  mqtt.cert.pem  mqtt.key.pem  truststore.jks
czujniki/: DHT 11.py  czujnik PiR.py
firmware/: README.MD  audioListener.py  debug_stream_controller.py  deploy_debug.sh  hls_server.py  index.html  init_stream_multicast.sh
firmware/mv_process/: auth.py  config.py  main.py  on_movement.py  token.py
firmware/scripts/: build-ws-stream.sh  debug_stream_controller.py  deploy-video.sh  install_rpi_deps.sh
firmware/services/: stream-local-mv.service  stream-multicast.service  stream-to-server.service
firmware/start_up_config/: README.md
firmware/start_up_config/start_up_http/: start_up_server.py
firmware/start_up_config/start_up_manager/: manager.py
firmware/ws-stream/: .gitignore  Cargo.toml  Cross.toml  README.md  aaaa
firmware/ws-stream/.cargo/: config.toml
firmware/ws-stream/src/: buffer.rs  config.rs  main.rs
firmware/ws-stream/src/stream/: libcamera_ha_stream.rs  mod.rs  v4l2_stream.rs
mqtt-broker/: .gitignore  Cargo.toml  README.md  rumqttd.toml
mqtt-broker/src/: auth.rs  main.rs
mqtt_project/: mqtt.py
release/release_v1_0_0/: docker-compose.yml  readme.md  release.sh
sss-frontend/: package-lock.json  package.json
sss-frontend/src/: App.css  App.tsx  authUtils.ts  index.css  themes.ts
sss-frontend/src/api/: activationAccountApi.ts  authApi.ts  devicesApi.ts  fetchStreams.ts  notificationsApi.ts  resetPasswordApi.ts
sss-frontend/src/http/: entities.ts  fetch.ts
streaming-server/: Cargo.toml  Dockerfile  README.md  build_and_deploy_image.sh  compose.dev.yaml  compose.yaml  openapi.yaml
streaming-server/cfg/: cfg.yaml  jwt_pub_key.pem  openapi.yaml  promtail-config.yaml
streaming/streaming-server/: Cargo.toml  README.md  compose.yaml  jira_tickets.txt  logo.ascii
streaming/streaming-server/cfg/: cfg.yaml  prometheus.yaml  redis-entrypoint.sh
streaming/streaming-server/src/: main.rs
streaming/streaming-server/src/core/: app.rs  config.rs  context.rs  http.rs  logging.rs  mod.rs  ws.rs
streaming/streaming-server/src/http/: mod.rs  router.rs
streaming/streaming-server/src/http/handlers/: bench_handler.rs  cors_options_handler.rs  hello_handler.rs  mod.rs  streams_handler.rs
streaming/streaming-server/src/services/: app_db.rs  auth.rs  core_db.rs  db.rs  device_store.rs  jwt.rs  mod.rs
streaming/streaming-server/src/ws/: mod.rs  router.rs  ws_task.rs
streaming/streaming-server/src/ws/handlers/: device_checkout_handler.rs  mod.rs  stream_handler.rs
streaming/ws-stream/: .gitignore  Cargo.toml  Cross.toml  README.md  build.sh  deploy.sh  index.html  index.js  log.txt
streaming/ws-stream/src/: config.rs  ffmpeg_stream.rs  gstreamer_stream.rs  main.rs  mp4_stream.rs  stream.rs  stream_factory.rs
streaming/ws-stream/src/stream/: audio.rs  ffmpeg_stream.rs  gstreamer_stream.rs  mod.rs  stream_factory.rs
streaming/ws-stream/tests/: test_gstreamer.rs
video-ai-service/: .gitignore  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  add_notif.py  backend_api.py  build_and_deploy_image.sh  constraints.txt  get_capture.py  main.py  pipelineElement.py  readme.md  requirements.cpu.txt  requirements.txt  setup_repo.sh  streamManager.py  test_stream.py  tracker.py
video-ai-service/src/: backend_api.py  config.py  faceRecognizer.py  main.py  pipelineElement.py  streamManager.py  streams_api.py  tracker.py
web-frontend/: .env  README.md  build_and_deploy_image.sh  components.json  create_dotenv.sh  docker-compose.yml  dockerfile  eslint.config.mjs  package-lock.json  package.json
(+305 files in other folders)
