[package]
name = "mqtt-broker"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.0"
lazy_static = "1.5.0"
reqwest = { version = "0.12.8", features = ["blocking"] }
rumqttd = { version = "0.19.0", features = ["verify-client-cert"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = "0.3.18"
