[package]
name = "ws-stream"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"


[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
tungstenite = "0.26.0"
bytes = "1.10.1"
