[package]
name = "streaming-server"
version = "0.1.0"
edition = "2024"
description = "Simple streaming server and manager for device-to-browser-client connections."

[profile.release]
# lto = "fat"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
deadpool = "0.12.1"
deadpool-redis = { version = "0.18.0", features = ["serde", "tokio"] }
futures-util = "0.3.31"
http-body-util = "0.1.2"
httparse = "1.9.5"
hyper = { version = "1.5.2", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
redis = { version = "0.27.6", features = ["json", "tokio-comp"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
sys-info = "0.9.1"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-loki = "0.2.5"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
yaml-rust2 = "0.9.0"
