[package]
name = "ws-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
getifaddrs = "0.1.5"
gstreamer = "0.23.3"
libc = "0.2.168"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
tungstenite = "0.24.0"

